# starting-ragchatbot-codebase

./: .flake8  CLAUDE.md  backend-tool-refactor.md  frontend-changes.md  pyproject.toml  run.sh
.claude/: settings.local.json
.claude/commands/: implement-feature.md
backend/: ai_generator.py  app.py  document_processor.py  search_tools.py
backend/tests/: TEST_RESULTS_ANALYSIS.md  conftest.py  test_ai_generator.py  test_api_endpoints.py  test_rag_system.py  test_search_tools.py  test_sequential_tool_calling.py
frontend/: index.html  script.js  style.css
scripts/: format.sh  lint.sh  quality-check.sh  type-check.sh
